Updated footer on index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <aside>This is aside</aside>
     <section>This is a section</section>
     <article>This is an article</article>  
-    <footer>This is a footer</footer>
+    <footer>
+        <p>Author: Stephanie Segovia<br>
+        <a href="mailto:hege@example.com">info@example.com</a></p>
+      </footer>
     <!-- <h1>COFFE</h1>
     <p>This is #1 paragraph.</p> -->
 </body>
